--- a/podstrony/dobiegania.html
+++ b/podstrony/dobiegania.html
@@ -49,7 +49,7 @@
                 <img src="../images/na-lato/nike-zoomx-vaporfly.png" alt="footz_logo">
                 <p>NIKE <span class="models">ZOOMX VAPORFLY</span></p>
                 <a class="kup" target="_blank" href="https://sklepbiegacza.pl/nike-zoomx-vaporfly-next-2-cu4111-002.html?cd=16059063579&ad=134496784484&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkaooFZtY57vZbPrQAjRfm7rB7GVCIW43dpsemwZYoU9Pbnf4fvMv2hoCMwsQAvD_BwE">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -57,7 +57,7 @@
                 <img src="../images/na-lato/nike-pegasus-trail-3.png" alt="footz_logo">
                 <p>NIKE <span class="models">PEGASUS TRAIL 3</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/nike-performance-pegasus-trail-3-obuwie-do-biegania-szlak-mystic-tealdark-smoke-greyuniverse-goldwild-berryfossil-stoneturquoise-blue-n1242a262-l11.html?size=49.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702382246_137314852548.&opc=2211&mpp=google|v1||pla-1445340888631||1031025||g|c||555137611421||pla|N1242A262-L110015000|1445340888631|1|&gclsrc=aw.ds&gclid=CjwKCAjwqauVBhBGEiwAXOepkaDS-xhBjkofo6CaM7qhHGoHYQOwYJOr8_kaAMXAFHECpIwvTp0u2RoCIFUQAvD_BwE">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -65,7 +65,7 @@
                 <img src="../images/na-lato/adidas-ultraboost-climacool-2.png" alt="footz_logo">
                 <p>ADIDAS ULTRABOOST <span class="models">CLIMACOOL 2</span></p>
                 <a class="kup" target="_blank" href="https://www.adidas.pl/ultraboost-climacool-2-dna-shoes/GZ0441.html">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -73,7 +73,7 @@
                 <img src="../images/na-lato/nike-air-max-270.png" alt="footz_logo">
                 <p>NIKE AIR MAX <span class="models">270</span></p>
                 <a class="kup" target="_blank" href="https://www.zalando.pl/nike-sportswear-air-max-270-tenisowki-i-trampki-blackanthracitewhitesolar-red-ni112o00r-q11.html">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -81,7 +81,7 @@
                 <img src="../images/na-lato/new-balance-fresh-foam-1080v11.png" alt="footz_logo">
                 <p>NEW BALANCE <span class="models">fresh foam 1080v11</span></p>
                 <a class="kup" target="_blank" href="https://nbsklep.pl/new_balance_fresh_foam_1080v11_m1080s11">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -113,7 +113,7 @@
                 <img src="../images/na-lato/asics-novablast-2-sps.png" alt="footz_logo">
                 <p>ASICS <span class="models">NOVABLAST 2 SPS</span></p>
                 <a class="kup" target="_blank" href="https://www.asics.com/pl/pl-pl/novablast™-2-sps/p/1201A483-020.html?size=12&width=Standard&gclid=CjwKCAjwqauVBhBGEiwAXOepkWWltcYmxzATGstv3_4aoxOmm3aHoy1W-2vtjBU3u0ghl83VxKNFlBoC_XoQAvD_BwE">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
@@ -121,7 +121,7 @@
                 <img src="../images/na-lato/puma-wired.png" alt="footz_logo">
                 <p>PUMA <span class="models">WIRED RUN</span></p>
                 <a class="kup" target="_blank" href="https://www.forpro.pl/mezczyzni/obuwie/lifestyle/jordan-one-take-3-czarny-dc7701-001?gclid=CjwKCAjwqauVBhBGEiwAXOepkQvEcB1SR2T8EEPXwRvfPMGua32ncoI3FABIJpIV9tm1A7eEdgXfYRoClsEQAvD_BwE">
-                <span class="material-symbols-outlined" style="size: 300%;">shopping_bag</span>
+                <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
             </div>
