--- a/podstrony/dobiegania.html
+++ b/podstrony/dobiegania.html
@@ -29,16 +29,16 @@
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
+                        <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
                         <ul>
-                            <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
                             <li><a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a></li>
                             <li><a href="https://www.nike.com/pl/" target="_blank">Nike</a></li>
                             <li><a href="https://www.adidas.pl/" target="_blank">Adidas</a></li>
-                            <li><a class="menu-categories-natopie" href="natopie.html">Na Topie</a></li>
-                            <li><a class="menu-categories-nalato" href="nalato.html">Na Lato</a></li>
+                            <li><a class="menu-categories-natopie" href="podstrony/natopie.html">Na Topie</a></li>
+                            <li><a class="menu-categories-nalato" href="podstrony/nalato.html">Na Lato</a></li>
+                            <li><a class="menu-categories-dobiegania" href="podstrony/dobiegania.html">Do Biegania</a></li>
                         </ul>
                     </div>
-        </div>
     </header>
     <main>
         <div class="do-biegania_hd">
