--- a/podstrony/dobiegania.html
+++ b/podstrony/dobiegania.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+    <script type="text/javascript" src="../script.js" defer></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="../images/logo/footz_icon.png" sizes="16x16" type="image/png">
     <title> Footz</title>
@@ -29,7 +30,7 @@
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
-                        <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
+                        <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
                         <ul>
                             <li><a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a></li>
                             <li><a href="https://www.nike.com/pl/" target="_blank">Nike</a></li>
@@ -44,6 +45,7 @@
         <div class="do-biegania_hd">
             <p>Do Biegania</p>
         </div>
+        <input type="text" class="search" placeholder="Szukaj...">
         <div class="main-div-categories">
             <div class="div-categories">
                 <img src="../images/na-lato/nike-zoomx-vaporfly.png" alt="footz_logo">
