--- a/podstrony/natopie.html
+++ b/podstrony/natopie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,0,0" />
+    <script type="text/javascript" src="../script.js" defer></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="icon" href="../images/logo/footz_icon.png" sizes="16x16" type="image/png">
     <title> Footz</title>
@@ -29,7 +30,7 @@
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
-                        <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
+                        <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
                         <ul>
                             <li><a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a></li>
                             <li><a href="https://www.nike.com/pl/" target="_blank">Nike</a></li>
@@ -44,10 +45,11 @@
         <div class="na-topie_hd">
             <p>Na Topie</p>
         </div>
+        <input type="text" class="search" placeholder="Szukaj...">
         <div class="main-div-categories">
             <div class="div-categories">
                 <img src="../images/na-lato/jordan-1-mid.png" alt="footz_logo">
-                <p>JORDAN 1 <span class="models">MID</span></p>
+                <p class="elements">JORDAN 1 <span class="models">MID</span></p>
                 <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-air-jordan-1-mid-QJTvQh/554724-371">
                 <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
