--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
 <body>
     <header>
         <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
-        <a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a>
-        <a href="https://www.nike.com/pl/" target="_blank">Nike</a>
-        <a href="https://www.adidas.pl/" target="_blank">Adidas</a>
+        <div class="logos"> 
+            <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="images/logos/jordan_logo.png" alt="jordan_logo"></a>
+            <a href="https://www.nike.com/pl/" target="_blank"><img src="images/logos/nike_logo.png" alt="nike_logo"></a>
+            <a href="https://www.adidas.pl/" target="_blank"><img src="images/logos/adidas_logo.png" alt="adidas_logo"></a>
+            <a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo.png" alt="puma_logo"></a>
+        </div>
         <input type="checkbox" id="active">
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
                         <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
                         <ul>
-                            <li><a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a></li>
-                            <li><a href="https://www.nike.com/pl/" target="_blank">Nike</a></li>
-                            <li><a href="https://www.adidas.pl/" target="_blank">Adidas</a></li>
+                            <li><a href="https://www.nike.com/pl/jordan" target="_blank"><img src="images/logos/jordan_logo-white.png" alt="jordan_logo"></a></li>
+                            <li><a href="https://www.nike.com/pl/" target="_blank"><img src="images/logos/nike_logo-white.png" alt="nike_logo"></a></li>
+                            <li><a href="https://www.adidas.pl/" target="_blank"><img src="images/logos/adidas_logo-white.png" alt="adidas_logo"></a></li>
+                            <li><a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo-white.png" alt="puma_logo"></a></li>
                             <li><a class="menu-categories-natopie" href="podstrony/natopie.html">Na Topie</a></li>
                             <li><a class="menu-categories-nalato" href="podstrony/nalato.html">Na Lato</a></li>
                             <li><a class="menu-categories-dobiegania" href="podstrony/dobiegania.html">Do Biegania</a></li>
@@ -92,9 +96,10 @@
         </div>
     </main>
     <footer>
-        <a href="https://www.nike.com/pl/jordan" target="_blank">Jordan</a>
-        <a href="https://www.nike.com/pl/" target="_blank">Nike</a>
-        <a href="https://www.adidas.pl/" target="_blank">Adidas</a>
+        <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="images/logos/jordan_logo.png" alt="jordan_logo"></a>
+        <a href="https://www.nike.com/pl/" target="_blank"><img src="images/logos/nike_logo.png" alt="nike_logo"></a>
+        <a href="https://www.adidas.pl/" target="_blank"><img src="images/logos/adidas_logo.png" alt="adidas_logo"></a>
+        <a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo.png" alt="puma_logo"></a>
         <h4 class="autor">©Dawid Ślusarczyk 2022</h4>
     </footer>
 </body>
