--- a/podstrony/natopie.html
+++ b/podstrony/natopie.html
@@ -23,6 +23,7 @@
 <body>
     <header>
         <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
+        <a href="kontakt.html">Kontakt</a>
         <div class="logos"> 
             <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo.png" alt="jordan_logo"></a>
             <a href="https://www.nike.com/pl/" target="_blank"><img src="../images/logos/nike_logo.png" alt="nike_logo"></a>
@@ -203,6 +204,7 @@
         </div>   
     </main>
     <footer>
+        <a href="kontakt.html">Kontakt</a>
         <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo.png" alt="jordan_logo"></a>
         <a href="https://www.nike.com/pl/" target="_blank"><img src="../images/logos/nike_logo.png" alt="nike_logo"></a>
         <a href="https://www.adidas.pl/" target="_blank"><img src="../images/logos/adidas_logo.png" alt="adidas_logo"></a>
