--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -23,6 +23,7 @@
 <body>
     <header>
         <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
+        <a href="kontakt.html">Kontakt</a>
         <div class="logos"> 
             <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo.png" alt="jordan_logo"></a>
             <a href="https://www.nike.com/pl/" target="_blank"><img src="../images/logos/nike_logo.png" alt="nike_logo"></a>
