--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="icon" href="images/logo/footz_icon.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="images/logo/footz_logo.png" sizes="16x16" type="image/png">
     <title> Footz</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -24,8 +24,10 @@
 </head>
 <body>
     <header>
-        <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
-        <a href="podstrony/kontakt.html">Kontakt</a>
+        <div class="first-header">
+            <a href="index.html"><img src="images/logo/footz_logo.png" alt="footz_logo"></a>
+            <a class="underline-text" href="podstrony/kontakt.html">Kontakt</a>
+        </div>
         <div class="logos"> 
             <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="images/logos/jordan_logo.png" alt="jordan_logo"></a>
             <a href="https://www.nike.com/pl/" target="_blank"><img src="images/logos/nike_logo.png" alt="nike_logo"></a>
@@ -49,7 +51,7 @@
                     </div>
     </header>
     <main>
-        <div></div>
+        <br><br><br><br><br><br>
         <!--NA TOPIE-->
         <div class="na-topie">
             <div class="categories">
@@ -97,11 +99,7 @@
         </div>
     </main>
     <footer>
-        <a href="podstrony/kontakt.html">Kontakt</a>
-        <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="images/logos/jordan_logo.png" alt="jordan_logo"></a>
-        <a href="https://www.nike.com/pl/" target="_blank"><img src="images/logos/nike_logo.png" alt="nike_logo"></a>
-        <a href="https://www.adidas.pl/" target="_blank"><img src="images/logos/adidas_logo.png" alt="adidas_logo"></a>
-        <a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo.png" alt="puma_logo"></a>
+        <a class="underline-text" href="podstrony/kontakt.html">Kontakt</a>
         <h4 class="autor">©Dawid Ślusarczyk 2022</h4>
     </footer>
 </body>
