--- a/podstrony/natopie.html
+++ b/podstrony/natopie.html
@@ -22,8 +22,10 @@
 </head>
 <body>
     <header>
-        <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
-        <a href="kontakt.html">Kontakt</a>
+        <div class="first-header">
+            <a href="../index.html"><img src="../images/logo/footz_logo.png" alt="footz_logo"></a>
+            <a class="underline-text" href="kontakt.html">Kontakt</a>
+        </div>
         <div class="logos"> 
             <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo.png" alt="jordan_logo"></a>
             <a href="https://www.nike.com/pl/" target="_blank"><img src="../images/logos/nike_logo.png" alt="nike_logo"></a>
@@ -47,7 +49,7 @@
     </header>
     <main>
         <div class="na-topie_hd">
-            <p>Na Topie</p>
+            <p style="color: red;">Na Topie</p>
         </div>
         <input type="text" class="search" placeholder="Szukaj...">
         <div class="main-div-categories">
@@ -205,10 +207,6 @@
     </main>
     <footer>
         <a href="kontakt.html">Kontakt</a>
-        <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo.png" alt="jordan_logo"></a>
-        <a href="https://www.nike.com/pl/" target="_blank"><img src="../images/logos/nike_logo.png" alt="nike_logo"></a>
-        <a href="https://www.adidas.pl/" target="_blank"><img src="../images/logos/adidas_logo.png" alt="adidas_logo"></a>
-        <a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="../images/logos/puma_logo.png" alt="puma_logo"></a>
         <h4 class="autor">©Dawid Ślusarczyk 2022</h4>
     </footer>
 </body>
