--- a/podstrony/kontakt.html
+++ b/podstrony/kontakt.html
@@ -35,7 +35,7 @@
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
-                        <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
+                        <img src="../images/logo/footz_logo.png" alt="footz_logo">
                         <ul>
                             <li><a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo-white.png" alt="jordan_logo"></a></li>
                             <li><a href="https://www.nike.com/pl/" target="_blank"><img src="../images/logos/nike_logo-white.png" alt="nike_logo"></a></li>
