--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="icon" href="images/logo/footz_logo.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="images/logo/footz_icon.png" sizes="16x16" type="image/png">
     <title> Footz</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,6 +27,7 @@
         <div class="first-header">
             <a href="index.html"><img src="images/logo/footz_logo.png" alt="footz_logo"></a>
             <a class="underline-text" href="podstrony/kontakt.html">Kontakt</a>
+            <a class="underline-text" href="podstrony/kontakt.html">Informacje</a>
         </div>
         <div class="logos"> 
             <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="images/logos/jordan_logo.png" alt="jordan_logo"></a>
@@ -38,22 +39,24 @@
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
-                        <img src="images/logo/footz_logo_yellow.png" alt="footz_logo">
+                        <img src="images/logo/footz_logo.png" alt="footz_logo">
                         <ul>
                             <li><a href="https://www.nike.com/pl/jordan" target="_blank"><img src="images/logos/jordan_logo-white.png" alt="jordan_logo"></a></li>
                             <li><a href="https://www.nike.com/pl/" target="_blank"><img src="images/logos/nike_logo-white.png" alt="nike_logo"></a></li>
                             <li><a href="https://www.adidas.pl/" target="_blank"><img src="images/logos/adidas_logo-white.png" alt="adidas_logo"></a></li>
                             <li><a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo-white.png" alt="puma_logo"></a></li>
-                            <li><a class="menu-categories-natopie" href="podstrony/natopie.html">Na Topie</a></li>
-                            <li><a class="menu-categories-nalato" href="podstrony/nalato.html">Na Lato</a></li>
-                            <li><a class="menu-categories-dobiegania" href="podstrony/dobiegania.html">Do Biegania</a></li>
+                            <li><a class="underline-text" href="podstrony/kontakt.html">Kontakt</a></li>
+                            <li><a class="underline-text" href="podstrony/kontakt.html">Informacje</a></li>
+                            <li><a class="underline-text-sec" href="podstrony/natopie.html">Na Topie</a></li>
+                            <li><a class="underline-text-sec" href="podstrony/nalato.html">Na Lato</a></li>
+                            <li><a class="underline-text-sec" href="podstrony/dobiegania.html">Do Biegania</a></li>
                         </ul>
                     </div>
     </header>
     <main>
-        <br><br><br><br><br><br>
         <!--NA TOPIE-->
         <div class="na-topie">
+            <br><br><br><br><br><br><br><br>
             <div class="categories">
                 <div class="introduce-categories">
                     <span class="introduce-categories_na-topie">Na Topie</span>
@@ -100,6 +103,7 @@
     </main>
     <footer>
         <a class="underline-text" href="podstrony/kontakt.html">Kontakt</a>
+        <a class="underline-text" href="podstrony/kontakt.html">Informacje</a>
         <h4 class="autor">©Dawid Ślusarczyk 2022</h4>
     </footer>
 </body>
