--- a/podstrony/natopie.html
+++ b/podstrony/natopie.html
@@ -25,6 +25,7 @@
         <div class="first-header">
             <a href="../index.html"><img src="../images/logo/footz_logo.png" alt="footz_logo"></a>
             <a class="underline-text" href="kontakt.html">Kontakt</a>
+            <a class="underline-text" href="kontakt.html">Informacje</a>
         </div>
         <div class="logos"> 
             <a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo.png" alt="jordan_logo"></a>
@@ -36,14 +37,16 @@
                 <label for="active" class="menu-btn"><span></span></label>
                 <label for="active" class="close"></label>
                     <div class="wrapper">
-                        <img src="../images/logo/footz_logo_yellow.png" alt="footz_logo">
+                        <img src="../images/logo/footz_logo.png" alt="footz_logo">
                         <ul>
                             <li><a href="https://www.nike.com/pl/jordan" target="_blank"><img src="../images/logos/jordan_logo-white.png" alt="jordan_logo"></a></li>
                             <li><a href="https://www.nike.com/pl/" target="_blank"><img src="../images/logos/nike_logo-white.png" alt="nike_logo"></a></li>
                             <li><a href="https://www.adidas.pl/" target="_blank"><img src="../images/logos/adidas_logo-white.png" alt="adidas_logo"></a></li>
                             <li><a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="../images/logos/puma_logo-white.png" alt="puma_logo"></a></li>
-                            <li><a class="menu-categories-nalato" href="../podstrony/nalato.html">Na Lato</a></li>
-                            <li><a class="menu-categories-dobiegania" href="../podstrony/dobiegania.html">Do Biegania</a></li>
+                            <li><a class="underline-text" href="kontakt.html">Kontakt</a></li>
+                            <li><a class="underline-text" href="kontakt.html">Informacje</a></li>
+                            <li><a class="underline-text-sec" href="nalato.html">Na Lato</a></li>
+                            <li><a class="underline-text-sec" href="dobiegania.html">Do Biegania</a></li>
                         </ul>
                     </div>
     </header>
@@ -206,7 +209,8 @@
         </div>   
     </main>
     <footer>
-        <a href="kontakt.html">Kontakt</a>
+        <a class="underline-text" href="kontakt.html">Kontakt</a>
+        <a class="underline-text" href="kontakt.html">Informacje</a>
         <h4 class="autor">©Dawid Ślusarczyk 2022</h4>
     </footer>
 </body>
