--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -187,7 +187,7 @@
             <div class="div-categories">
                 <img src="../images/na-lato/nike-air-force-1.png" alt="footz_logo">
                 <p>NIKE AIR FORCE 1 <span class="models">'07</span></p>
-                <a class="kup" target="_blank" href="https://www.zalando.pl/nike-sportswear-air-force-1-07-sneakersy-niskie-white-ni112n022-a11.html?size=50.5&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1031025||g|c||555078498652||pla|NI112N022-A110160000|1442533158449|1|&gclsrc=aw.ds&gclid=CjwKCAjwqauVBhBGEiwAXOepkXkSlEyUwq0Afi8PUgre10UZCAZhDUGOQ2_lO6hq5uTVX1i0P6TbFBoCX9oQAvD_BwE">
+                <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-meskie-air-force-1-07-lKPQ6q/CW2288-111">
                 <span class="material-symbols-outlined">shopping_bag</span>
                 <span class="kup-text">Kup</span>
                 </a>  
