--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                             <li><a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo-white.png" alt="puma_logo"></a></li>
                             <li><a class="underline-text" href="podstrony/kontakt.html">Kontakt</a></li>
                             <li><a class="underline-text" href="podstrony/kontakt.html">Informacje</a></li>
+                            <li><a class="underline-text-sec" style="color: red;" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">Nowość</a></li>
                             <li><a class="underline-text-sec" href="podstrony/natopie.html">Na Topie</a></li>
                             <li><a class="underline-text-sec" href="podstrony/nalato.html">Na Lato</a></li>
                             <li><a class="underline-text-sec" href="podstrony/dobiegania.html">Do Biegania</a></li>
@@ -69,6 +70,20 @@
                 <span class="zobacz-text">Zobacz</span>
                 <span class="material-symbols-outlined">arrow_forward_ios</span>
             </a>  
+        </div>
+        <!--NOWOŚĆ-->
+        <div class="nowosc">
+            <span class="nowosc-text1">Nowość</span>
+            <video autoplay muted loop><source src="images/SnapInsta_290813727_625931038413812_1500896815988170316_n.mp4" type="video/mp4"></video>
+                <div>
+                    <span class="nowosc-text2">Nowość</span>
+                    <img src="images/nike-air-zoom-superrep-3.png" alt="sneakers_orange_jordan">
+                    <p>NIKE AIR ZOOM <span class="models">SUPERREP 3</span></p>
+                    <a class="zobacz" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">
+                        <span class="zobacz-text">Zobacz</span>
+                        <span class="material-symbols-outlined">arrow_forward_ios</span>
+                    </a>
+                </div>
         </div>
         <!--NA LATO-->
         <div class="na-lato">
