--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <li><a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo-white.png" alt="puma_logo"></a></li>
                             <li><a class="underline-text" href="podstrony/kontakt.html">Kontakt</a></li>
                             <li><a class="underline-text" href="podstrony/kontakt.html">Informacje</a></li>
-                            <li><a class="underline-text-sec" style="color: red;" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">Nowość</a></li>
+                            <li><a class="underline-text-sec" target="_blank" style="color: red;" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">Nowość</a></li>
                             <li><a class="underline-text-sec" href="podstrony/natopie.html">Na Topie</a></li>
                             <li><a class="underline-text-sec" href="podstrony/nalato.html">Na Lato</a></li>
                             <li><a class="underline-text-sec" href="podstrony/dobiegania.html">Do Biegania</a></li>
@@ -81,12 +81,23 @@
                     <span class="nowosc-text2">Nowość</span>
                     <img src="images/nike-air-zoom-superrep-3.png" alt="sneakers_orange_jordan">
                     <p>NIKE AIR ZOOM <span class="models">SUPERREP 3</span></p>
-                    <a class="zobacz" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">
+                    <a class="zobacz" target="_blank" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">
                         <span class="zobacz-text">Zobacz</span>
                         <span class="material-symbols-outlined">arrow_forward_ios</span>
                     </a>
                 </div>
         </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5354650576104724"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-5354650576104724"
+     data-ad-slot="7169940557"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
         <!--NA LATO-->
         <div class="na-lato">
             <div class="categories">
