--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -45,7 +45,7 @@
                             <li><a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="../images/logos/puma_logo-white.png" alt="puma_logo"></a></li>
                             <li><a class="underline-text" href="kontakt.html">Kontakt</a></li>
                             <li><a class="underline-text" href="kontakt.html">Informacje</a></li>
-                            <li><a class="underline-text-sec" style="color: red;" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">Nowość</a></li>
+                            <li><a class="underline-text-sec" target="_blank" style="color: red;" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">Nowość</a></li>
                             <li><a class="underline-text-sec" href="natopie.html">Na Topie</a></li>
                             <li><a class="underline-text-sec" href="dobiegania.html">Do Biegania</a></li>
                         </ul>
@@ -57,6 +57,14 @@
         </div>
         <input type="text" class="search" placeholder="Szukaj...">
         <div class="main-div-categories">
+            <div class="div-categories">
+                <img src="../images/na-lato/nike-air-zoom-superrep-3.png" alt="footz_logo">
+                <p>NIKE AIR ZOOM <span class="models">SUPERREP 3</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">
+                <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
             <div class="div-categories">
                 <img src="../images/na-lato/nike-air-huarache.png" alt="footz_logo">
                 <p>NIKE AIR <span class="models">HUARACHE</span></p>
@@ -378,7 +386,7 @@
                     <span class="nowosc-text2">Nowość</span>
                     <img src="../images/nike-air-zoom-superrep-3.png" alt="sneakers_orange_jordan">
                     <p>NIKE AIR ZOOM <span class="models">SUPERREP 3</span></p>
-                    <a class="zobacz" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">
+                    <a class="zobacz" target="_blank" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">
                         <span class="zobacz-text">Zobacz</span>
                         <span class="material-symbols-outlined">arrow_forward_ios</span>
                     </a>
