--- a/podstrony/nalato.html
+++ b/podstrony/nalato.html
@@ -19,6 +19,8 @@
 
   gtag('config', 'UA-231759180-1');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5354650576104724"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
