--- a/podstrony/dobiegania.html
+++ b/podstrony/dobiegania.html
@@ -155,7 +155,7 @@
                 <div class="introduce-categories">
                     <span class="introduce-categories_na-topie">Na Topie</span>
                     <br><hr><br>
-                    Buty z firmy <span style="color: black;">Jordan</span> jak zawsze zaskakują. Aktualnie zdobyły bardzo dużą popularność i wiele osób poleca buty Jordana.
+                    Buty z firmy <span style="color: black; font-weight: 600;">Jordan</span> jak zawsze zaskakują. Aktualnie zdobyły bardzo dużą popularność i wiele osób poleca buty Jordana.
                 </div>
                 <img src="../images/sneakers_orange_jordan.png" alt="sneakers_orange_jordan">
             </div>  
