--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="header-main">
         <div class="first-header">
             <a href="index.html"><img src="images/logo/footz_logo.png" alt="footz_logo"></a>
             <a class="underline-text" href="podstrony/kontakt.html">Kontakt</a>
@@ -49,7 +49,7 @@
                             <li><a href="https://eu.puma.com/pl/pl/" target="_blank"><img src="images/logos/puma_logo-white.png" alt="puma_logo"></a></li>
                             <li><a class="underline-text" href="podstrony/kontakt.html">Kontakt</a></li>
                             <li><a class="underline-text" href="podstrony/kontakt.html">Informacje</a></li>
-                            <li><a class="underline-text-sec" target="_blank" style="color: red;" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">Nowość</a></li>
+                            <li><a class="underline-text-sec-nowosc" target="_blank" style="color: red;" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">Nowość</a></li>
                             <li><a class="underline-text-sec" href="podstrony/natopie.html">Na Topie</a></li>
                             <li><a class="underline-text-sec" href="podstrony/nalato.html">Na Lato</a></li>
                             <li><a class="underline-text-sec" href="podstrony/dobiegania.html">Do Biegania</a></li>
@@ -72,6 +72,41 @@
                 <span class="zobacz-text">Zobacz</span>
                 <span class="material-symbols-outlined">arrow_forward_ios</span>
             </a>  
+        </div>       
+        <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 600; font-size: 50px; margin-top: 100px;">Polecane: </h1>
+        <div class="main-div-categories" style="margin-top: 50px;">
+            <div class="div-categories">
+                <img src="images/na-lato/nike-air-zoom-superrep-3.png" alt="footz_logo">
+                <p>NIKE AIR ZOOM <span class="models">SUPERREP 3</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/nike-performance-air-zoom-superrep-3-obuwie-treningowe-blackwhiteanthracite-n1241a12g-q11.html">
+                <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="images/na-lato/jordan-xxxvi.png" alt="footz_logo">
+                <p>JORDAN <span class="models">XXXVI</span></p>
+                <a class="kup" target="_blank" href="https://skstore.eu/pl/air-jordan-xxxvi-blacklaser-orange-deadly-pink-cz2650-002.html?cd=1509365023&ad=58449838512&kd=&gclid=CjwKCAjwqauVBhBGEiwAXOepkYjAgt-nJOyo0gygoN6ntoxX_krLpiQy9NfDa7e9DIW4mselzUcrdBoCHPMQAvD_BwE">
+                <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="images/na-lato/adidas-originals-nmd-r1.png" alt="footz_logo">
+                <p>ADIDAS ORIGINALS <span class="models">NMD_R1</span></p>
+                <a class="kup" target="_blank" href="https://www.zalando.pl/adidas-originals-nmd_r1-sneakersy-niskie-core-blacksolar-red-ad115o11z-q11.html?size=36&allophones=0&wmc=SEM480_NB_GO._6748070217_702385882_137314852988.&opc=2211&mpp=google|v1||pla-1442533158449||1031025||g|c||555078498652||pla|AD115O11Z-Q110035000|1442533158449|1|&gclsrc=aw.ds&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiML9OSOS8bHP5ntpOHf7OAdqRGClPlXp0mg8XKbfBXUMXVjYDId5ysaArjpEALw_wcB">
+                <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
+            <div class="div-categories">
+                <img src="images/na-lato/nike-air-force-1-crater-flyknit-next-nature.png" alt="footz_logo">
+                <p>NIKE AIR FORCE 1 <span class="models">CRATER FLYKNIT NEXT NATURE</span></p>
+                <a class="kup" target="_blank" href="https://www.nike.com/pl/t/buty-meskie-air-force-1-crater-flyknit-next-nature-qHncTB/DM0590-100?nikemt=true&cp=35318472452_search_%7c%7c10583401400%7c110102200968%7c%7cc%7cPL%7ccssproducts%7c453128597222&ds_rl=1252249&gclid=Cj0KCQjwhqaVBhCxARIsAHK1tiORu_JemM97j58oXaCY0tXPSLX9un8Ul2cjwd1L76cvkFl0M5mzfpEaAjdfEALw_wcB&gclsrc=aw.ds">
+                <span class="material-symbols-outlined">shopping_bag</span>
+                <span class="kup-text">Kup</span>
+                </a>  
+            </div>
         </div>
         <!--NOWOŚĆ-->
         <div class="nowosc">
